<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
  >

    <LinearLayout
        android:layout_width="600dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_connection_status"
                android:textSize="32dp" />

            <View
                android:id="@+id/view1"
                android:layout_width="100dp"
                android:layout_height="0dp" />

            <TextView
                android:id="@+id/apk_connect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_connection_falied"
                android:textSize="32dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_serverip"
                android:textSize="32dp" />

            <View
                android:id="@+id/View07"
                android:layout_width="30dp"
                android:layout_height="0dp" />

            <EditText
                android:id="@+id/edit_IP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
              />

            <Button
                android:id="@+id/btn_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_change" />

            <Button
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_test" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_download"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View08"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/down_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                      android:textSize="32dp" 
                    android:text="@string/str_space" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_ok"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View01"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_down_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_na"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View06"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_down_flase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:padding="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_install"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                 android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_ok"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View02"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_install_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                 android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_na"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View03"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_install_flase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:padding="20dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apkd_uninstall"
                android:textSize="32dp" />

            <LinearLayout
                android:layout_width="match_parent"
                 android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_ok"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View04"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_uninstall_success"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                 android:paddingTop="20dp"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_counter_na"
                    android:textSize="32dp" />

                <View
                    android:id="@+id/View05"
                    android:layout_width="100dp"
                    android:layout_height="0dp" />

                <TextView
                    android:id="@+id/count_uninstall_flase"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apkd_coutner_0"
                    android:textSize="32dp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
